--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+/* * {
+  border: 2px solid red;
+} */
+
 .App {
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-top: 20px;
 }
 
 .App-logo {
