--- a/src/components/Reader.css
+++ b/src/components/Reader.css
@@ -10,41 +10,41 @@
 
 
   position: absolute;
-  width: 40%;
-  height: 40%;
+  width: 50%;
+  height: 50%;
 }
 
 .reader span {
-    display: block;
-    transform: translate(-40% -40%);
-    -webkit-transform: translate(-40%, -40%) rotate(-45deg);
-     -ms-transform: translate(-40%, -40%) rotate(-45deg);
-     -moz-transform: translate(-40%, -40%) rotate(-45deg);
-    top: 40%;
-    left: 40%;
-    position: absolute;
+  display: block;
+  transform: translate(-50% -50%);
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+   -ms-transform: translate(-50%, -50%) rotate(-45deg);
+   -moz-transform: translate(-50%, -50%) rotate(-45deg);
+  top: 50%;
+  left: 50%;
+  position: absolute;
 }
 
 
-.top {
+.TOP {
   left: 0;
   top: 0;
   /* background: red; */
 }
 
-.left {
+.LEFT {
   left: 0;
   bottom: 0;
   /* background: green; */
 }
 
-.right {
+.RIGHT {
   right: 0;
   top: 0;
   /* background: yellow; */
 }
 
-.bottom {
+.BOTTOM {
   right: 0;
   bottom: 0;
   /* background: blue; */
