--- a/src/components/SettingsZone.css
+++ b/src/components/SettingsZone.css
@@ -1,19 +1,14 @@
 .all-readers {
-  display: block;
-  float: right;
-  /* id="cover-logo */
-  position: inherit;
+  position: absolute;
   z-index: 5;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  /* margin: auto; */
-  margin-top: 60px;
-  margin-left: 40px;
-  width: 30%;
-  height: 10px;
-  padding: 15% 0;
+  margin: auto;
+  width: 100%;
+  height: 0;
+  padding: 50% 0;
   background: #FFF;
   text-align: center;
   -ms-transform: rotate(45deg);
