--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
 }
 
 .settings-zone {
+  min-width: 400px;
   position: relative;
   width: 40%;
   height: 40%;
@@ -64,7 +65,7 @@
   top: 0;
   bottom: 0;
   margin: auto;
-  width: 10%;
+  width: 60%;
   height: 0;
   padding: 5% 0;
   border: solid 1px rgba(255,255,255,0.2);
