added a nonstop drawings button (oldest drawing is always deleted and a new one is added if nonstop is on)

--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,12 @@ button:hover {
 canvas {
   border-radius: 20px;
 }
+
+.nonstop-on {
+  background-color: lightgray;
+  opacity: .5
+}
+.nonstop-on:hover {
+  background-color: lightgray;
+  opacity: .8
+}
